--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "@rainbow-me/rainbowkit": "1.1.2",
+    "next": "^13.5.6",
+    "next-intl": "^2.20.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "viem": "~1.16.3",
+    "wagmi": "~1.4.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=16.8.0"
   }
 }
