--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "1.1.2",
+    "axios": "^1.5.1",
     "next": "^13.5.6",
     "next-intl": "^2.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "viem": "~1.16.3",
     "wagmi": "~1.4.3"
   },
