--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "1.1.2",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "next": "^13.5.6",
     "next-intl": "^2.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "viem": "~1.16.3",
-    "wagmi": "~1.4.3"
+    "wagmi": "~1.4.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
