--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TAAS_API_KEY="8RF05YdFP+vQgn1EuAa3+A=="
+TAAS_API_KEY="fuVn4kwMDBuLa0oi4pLyEQ=="
 BACKEND_ENDPOINT="https://taas-api.onrender.com/api"
-PROJECT_ID=""
+PROJECT_ID="rec_ckatr0tbfjq4rurkd7tg"
